Bug 1730689 - FetchEvent.mRespondWithHandler could be nullptr when self dispatching events in ServiceWorker. r=dom-worker-reviewers,jstutte

Differential Revision: https://phabricator.services.mozilla.com/D133897